Make main-menu items a fixed size
With only a few modules active in a project, they get too wide on large
screens otherwise.

--- a/sass/application.scss
+++ b/sass/application.scss
@@ -412,7 +412,7 @@ select {
   box-shadow: inset 0 -1px 0 $medium-grey;
   li {
     display: table-cell;
-    width: 1%;
+    width: 105px;
     a {
       display: block;
       color: $grey;
